<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clipToPadding="false"
        android:fillViewport="false">


        <LinearLayout
            android:id="@+id/InfoLayoutAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/dereceTextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/d_m_numaras_gir"
                android:inputType="number"
                android:padding="10dp" />

            <Button
                android:id="@+id/dereceButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/derece_getir" />

            <LinearLayout
                android:id="@+id/LinearNodeDegree"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nodeDegreeFront"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/se_ilen_d_m_derecesi"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/nodeDegreeBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/nan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center_vertical|center_horizontal"
                    android:id="@+id/totalEdgeCountFront"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/toplam_kenar" />

                <TextView
                    android:gravity="center_vertical|center_horizontal"
                    android:id="@+id/totalEdgeCountBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center_vertical|center_horizontal"
                    android:id="@+id/completeGraphFront"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/complete_graf_m" />

                <TextView
                    android:gravity="center_vertical|center_horizontal"
                    android:id="@+id/completeGraphBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nan" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearExplorer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ExplorerFront"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gezinme_durumu"
                    tools:ignore="NestedWeights" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/explorerBack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </ScrollView>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/LinearDTime"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="0.8"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/accessTimeFront"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/d_dizisi" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/accessTimeBack"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearFTime"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0.8"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/processTimeFront"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/processTimeBack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </ScrollView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>